--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  /* display: flex;
+  justify-content: center; */
 }
 
 /* do not edit this footer */
@@ -23,4 +25,26 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+.whole {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+  
+}
+
+.items {
+  display: flex;
+  gap: 16px;
+  justify-content: space-between;
+}
+
+.subitem {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100px;
+  align-items: center;
+  flex: 1;
+  text-align: center;
 }
